@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in.
 ##
-##  	Copyright (C) 1998, 1999, 2000 Free Software Foundation, Inc.
+##  	Copyright (C) 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
 ##
 ##   This file is part of GUILE.
 ##   
@@ -26,11 +26,11 @@ ice9_sources =								   \
 	and-let-star.scm arrays.scm boot-9.scm calling.scm common-list.scm \
 	debug.scm debugger.scm documentation.scm emacs.scm expect.scm	   \
 	format.scm getopt-long.scm hcons.scm lineio.scm ls.scm mapping.scm \
-	match.scm networking.scm null.scm optargs.scm poe.scm popen.scm    \
+	match.scm networking.scm null.scm optargs.scm poe.scm popen.scm	   \
 	posix.scm psyntax.pp psyntax.ss q.scm r4rs.scm r5rs.scm		   \
-	rdelim.scm receive.scm srfi-8.scm				   \
-	regex.scm runq.scm safe-r5rs.scm safe.scm session.scm slib.scm	   \
-	streams.scm string-fun.scm syncase.scm tags.scm threads.scm 
+	rdelim.scm receive.scm srfi-8.scm regex.scm runq.scm		   \
+	safe-r5rs.scm safe.scm session.scm slib.scm stack-catch.scm	   \
+	streams.scm string-fun.scm syncase.scm tags.scm threads.scm
 
 subpkgdatadir = $(pkgdatadir)/$(VERSION)/ice-9
 subpkgdata_DATA = $(ice9_sources)
