@@ -8,6 +8,12 @@ Changes since Guile 1.4:
 
 * Changes to the distribution
 
+** New module (ice-9 stack-catch):
+
+stack-catch is like catch, but saves the current state of the stack in
+the the-last-stack fluid for the debugger to inspect or in able to
+re-throw an error.
+
 ** The module (ice-9 and-let*) has been renamed to (ice-9 and-let-star)
 
 This has been done to prevent problems on lesser operating systems
